# auto-annotate-web

./: README.md  ad_api.py  app.py  poly2bbox_api.py  pyproject.toml
src/auto_annotate_web/: __about__.py  __init__.py  __main__.py  annotator.py  app.py  poly2bbox.py
src/auto_annotate_web/cli/: __init__.py
src/auto_annotate_web/core/: __init__.py  check.py  dependencies.py
tests/: __init__.py
